--- a/BankingApp-UI-master/angular.json
+++ b/BankingApp-UI-master/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "httpclientexample": {
+    "BankingApp-UI": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:class": {
@@ -38,7 +38,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/httpclientexample",
+            "outputPath": "dist/BankingApp-UI",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -88,18 +88,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "httpclientexample:build"
+            "browserTarget": "BankingApp-UI:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "httpclientexample:build:production"
+              "browserTarget": "BankingApp-UI:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "httpclientexample:build"
+            "browserTarget": "BankingApp-UI:build"
           }
         },
         "test": {
@@ -136,18 +136,18 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "httpclientexample:serve"
+            "devServerTarget": "BankingApp-UI:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "httpclientexample:serve:production"
+              "devServerTarget": "BankingApp-UI:serve:production"
             }
           }
         }
       }
     }
   },
-  "defaultProject": "httpclientexample",
+  "defaultProject": "BankingApp-UI",
   "cli": {
     "analytics": "ec8a65d6-4c4f-4df9-91fc-271c0c0b68aa"
   }
