--- a/BankingApp-UI-master/package.json
+++ b/BankingApp-UI-master/package.json
@@ -1,10 +1,13 @@
 {
-  "name": "httpclientexample",
+  "name": "BankingApp-UI",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build"
+    "build": "ng build",
+    "test": "ng test",
+    "lint": "ng lint",
+    "e2e": "ng e2e"
   },
   "private": true,
   "dependencies": {
